{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 5,
  "lineage": "9e4028b9-f8ef-4f7e-4b81-ddf23bc1026b",
  "resources": [
    {
      "module": "module.ec2-instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:subnet/subnet-06d9de612fbf79263",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-3c",
            "availability_zone_id": "euw3-az3",
            "available_ip_address_count": 4091,
            "cidr_block": "172.31.32.0/20",
            "default_for_az": true,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06d9de612fbf79263",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "512978621590",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-3",
            "state": "available",
            "vpc_id": "vpc-05fcd24c167ad4d5a"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0f95dedaf2f938d49",
            "arn": "arn:aws:ec2:eu-west-3:512978621590:instance/i-0a1cde2102fd7551c",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-3c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a1cde2102fd7551c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-01048735760832642"
              }
            ],
            "primary_network_interface_id": "eni-01048735760832642",
            "private_dns": "ip-172-31-33-85.eu-west-3.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.33.85",
            "public_dns": "ec2-52-47-163-46.eu-west-3.compute.amazonaws.com",
            "public_ip": "52.47.163.46",
            "region": "eu-west-3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0a9d29ba0c5e3a51d",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "-20260108203537010600000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06d9de612fbf79263",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
            },
            "vpc_security_group_ids": [
              "sg-0bc29d43cef80e355"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "i-0a1cde2102fd7551c",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.ec2-instance.aws_iam_instance_profile.this",
            "module.ec2-instance.aws_iam_role.this",
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2-instance.data.aws_partition.current",
            "module.ec2-instance.data.aws_ssm_parameter.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:security-group/sg-0bc29d43cef80e355",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0bc29d43cef80e355",
            "ingress": [],
            "name": "-20260108203537010600000001",
            "name_prefix": "-",
            "owner_id": "512978621590",
            "region": "eu-west-3",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": ""
            },
            "tags_all": {
              "Name": ""
            },
            "timeouts": null,
            "vpc_id": "vpc-05fcd24c167ad4d5a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "sg-0bc29d43cef80e355",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.ec2-instance.data.aws_subnet.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2-instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:security-group-rule/sgr-0c195b5e96e11bdac",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0c195b5e96e11bdac",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0bc29d43cef80e355",
            "security_group_rule_id": "sgr-0c195b5e96e11bdac",
            "tags": {
              "Name": "-ipv4_default"
            },
            "tags_all": {
              "Name": "-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "sgr-0c195b5e96e11bdac",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-3:512978621590:security-group-rule/sgr-0aab8a3e9d37f6998",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0aab8a3e9d37f6998",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-west-3",
            "security_group_id": "sg-0bc29d43cef80e355",
            "security_group_rule_id": "sgr-0aab8a3e9d37f6998",
            "tags": {
              "Name": "-ipv6_default"
            },
            "tags_all": {
              "Name": "-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "512978621590",
            "id": "sgr-0aab8a3e9d37f6998",
            "region": "eu-west-3"
          },
          "dependencies": [
            "module.ec2-instance.aws_security_group.this",
            "module.ec2-instance.data.aws_subnet.this"
          ]
        }
      ]
    }
  ]
}